fixed overflowing text in category titles

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ body {
     color: #135072;
     font-weight: bold;
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .category-body {
